--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <meta content='noarchive' name='googlebot'/>
 <meta content='noindex, nofollow' name='robots'/>
-<meta content='http://sexmobile.com/' property='og:url'/>
+<meta content='http://arabsexi.info/arab-sex/moroccan-sex/%d8%b7%d8%a7%d9%84%d8%a8%d8%a9-%d8%b5%d8%ba%d9%8a%d8%b1%d8%a9-%d9%85%d8%ba%d8%b1%d8%a8%d9%8a%d9%87-%d9%85%d8%b1%d8%a7%d9%87%d9%82%d8%a9-%d8%a8%d8%aa%d9%85%d8%b5-%d8%b2%d8%a8-%d8%b3%d8%ad%d8%a8%d9%87/' property='og:url'/>
 <script language='javascript' type='text/javascript'>
 window.location ="http://dofaalmntwfaa.blogspot.be/search/label/u15";</script>
